--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -1,15 +1,22 @@
+<div class="container" data-ng-cloak>
 <h2 style="font-weight:normal">Settings</h2>
+<form data-ng-submit="" name="settingsForm">
+<button class="btn btn-primary pull-right" type="submit"><i class="icon-ok"></i> Apply</button>
 <tabset>
 	<tab heading="Writing Systems">
 		<div data-ng-include="'/angular-app/languageforge/lexicon/views/writing-systems.html'"></div>
 	</tab>
 	<tab heading="Fields">
 		<div class="row">
+		
+		<!-- Left column: field list -->
 		<div class="span4">
 			<fieldset>
 			<legend>Show the following fields:</legend>
 			<ul class="unstyled">
-				<li data-ng-click="selectList(listId)" data-ng-repeat="(listId, list) in config.entry.fieldNames"><div class="checkbox"><input data-ng-model="currentListsEnabled[listId]" type="checkbox"/>{{list}}</div></li>
+				<li data-ng-click="selectList(listId)" data-ng-repeat="(listId, list) in config.entry.fieldNames">
+					<div class="checkbox"><input data-ng-model="currentListsEnabled[listId]" type="checkbox"/>{{list}}</div>
+				</li>
 			</ul>
 			</fieldset>
 			
@@ -17,86 +24,97 @@
 			<pre>{{config|json}}</pre>
 		</div>
 		
+		<!-- Right column: field setup -->
 		<div class="span8">
-			<form data-ng-submit="" name="setupForm">
 			<fieldset>
 				<legend>Setup for "selected field"</legend>
 				<div class="well">
-					<div>
-						<label>Name for display <input type="text" data-ng-model="unknown"/></label>
+					<div class="control-group">
+						<label class="control-label" for="displayName">Name for display</label>
+						<div class="controls">
+							<input type="text" id="displayName" data-ng-model="unknown">
+							<label style="margin-bottom:20px">
+								<input type="checkbox" data-ng-model="unknown"/> Hidden if empty
+							</label>
+						</div>
 					</div>
-					<div>
-						<label style="margin-bottom:20px"><input type="checkbox" data-ng-model="unknown"/> Hidden if empty</label>
-					</div>
-					<div class="well">
-						<label>Writing System</label>
-						<ul class="unstyled">
-							<li data-ng-click="selectList(writingSystemId)" data-ng-repeat="(writingSystemId, writingSystem) in config.writingsystems.map"><div class="checkbox"><input data-ng-model="currentListsEnabled[writingSystemId]" type="checkbox"/>{{writingSystem}}</div></li>
+					<hr />
+					
+					<div class="control-group">
+						<label class="control-label" for="wsList">Writing System</label>
+						<ul class="unstyled"  id="wsList">
+							<li data-ng-click="selectList(writingSystemId)" data-ng-repeat="(writingSystemId, writingSystem) in config.writingsystems.map">
+								<div class="checkbox"><input data-ng-model="currentListsEnabled[writingSystemId]" type="checkbox"/>{{writingSystem}}</div>
+							</li>
 						</ul>
 					</div>
-					<button class="btn" data-ng-click="editWritingSystemsCollapsed != editWritingSystemsCollapsed"><i class="icon-pencil"></i>Edit writing systems</button>
-					<a data-ng-show="true" href="" data-ng-click="editWritingSystems()">Edit writing systems</a>
-					<div data-collapse="false" style="background-color:white;">
-						<legend>Edit Writing Systems</legend>
+					<a data-ng-show="editWritingSystemsCollapsed" href="" data-ng-click="editWritingSystemsCollapsed = false">Edit writing systems</a>
+					
+					<div data-collapse="editWritingSystemsCollapsed">
+						<hr />
+						<button class="btn btn-primary pull-right" data-ng-click="saveWritingSystems()"><i class="icon-ok"></i> Done</button>
+						<h3 style="font-weight:normal">Edit Writing Systems</h3>
 						<div data-ng-include="'/angular-app/languageforge/lexicon/views/writing-systems.html'">
 						</div>
 					</div>
 				</div>
-				<button class="btn btn-small" type="submit" data-ng-show="false"><i class="icon-ok"></i>Save</button>
 			</fieldset>
-			</form>
 		</div>
 		</div>
 	</tab>
 	<tab heading="Tasks">
 		<div class="row">
+		
+		<!-- Left column: task list -->
 		<div class="span4">
 			<fieldset>
 			<legend>Show the following tasks:</legend>
-			<ul class="unstyled">
-				<li><div class="control-group">
-					<label>Dashboard</label>
-					<div class="controls">
-						<label class="checkbox"><input type="checkbox" data-ng-model="unknown"> Dashboard</label>
-					</div>
-				</div></li>
-				<li><div class="control-group">
-					<label>Dictionary</label>
-					<div class="controls">
-						<label class="checkbox"><input type="checkbox" data-ng-model="unknown"> Dictionary Browse &amp Edit</label>
-					</div>
-				</div></li>
-				<li><div class="control-group">
-					<label>Add Information</label>
-					<div class="controls">
-						<label class="checkbox"><input type="checkbox" data-ng-model="unknown"> Add Meanings</label>
-						<label class="checkbox"><input type="checkbox" data-ng-model="unknown"> Add Parts of Speech</label>
-						<label class="checkbox"><input type="checkbox" data-ng-model="unknown"> Add Example Sentences</label>
-					</div>
-				</div></li>
-				<li><div class="control-group">
-					<label>Gather Words</label>
-					<div class="controls">
-						<label class="checkbox"><input type="checkbox" data-ng-model="unknown"> From Texts</label>
-						<label class="checkbox"><input type="checkbox" data-ng-model="unknown"> From a Word List</label>
-						<label class="checkbox"><input type="checkbox" data-ng-model="unknown"> From Semantic Domains</label>
-					</div>
-				</div></li>
-				<li><div class="control-group">
-					<label>Settings</label>
-					<div class="controls">
-						<label class="checkbox"><input type="checkbox" data-ng-model="unknown"> Settings</label>
-					</div>
-				</div></li>
-				<li><div class="control-group">
-					<label>Review</label>
-					<div class="controls">
-						<label class="checkbox"><input type="checkbox" data-ng-model="unknown"> Review</label>
-					</div>
-				</div></li>
-			</ul>
+			<dl class="unstyled">
+				<dt>Dashboard</dt>
+				<dd>
+					<div class="control-group"><div class="controls">
+						<label class="checkbox"><input type="checkbox" data-ng-model="show.task.dashboard"> Dashboard</label>
+					</div></div>
+				</dd>
+				<dt>Dictionary</dt>
+				<dd>
+					<div class="control-group"><div class="controls">
+						<label class="checkbox"><input type="checkbox" data-ng-model="show.task.dbe"> Dictionary Browse &amp Edit</label>
+					</div></div>
+				</dd>
+				<dt>Add Information</dt>
+				<dd>
+					<div class="control-group"><div class="controls">
+						<label class="checkbox"><input type="checkbox" data-ng-model="show.task.addMeanings"> Add Meanings</label>
+						<label class="checkbox"><input type="checkbox" data-ng-model="show.task.addPartOfSpeech"> Add Parts of Speech</label>
+						<label class="checkbox"><input type="checkbox" data-ng-model="show.task.addExample"> Add Example Sentences</label>
+					</div></div>
+				</dd>
+				<dt>Gather Words</dt>
+				<dd>
+					<div class="control-group"><div class="controls">
+						<label class="checkbox"><input type="checkbox" data-ng-model="show.task.fromTexts"> From Texts</label>
+						<label class="checkbox"><input type="checkbox" data-ng-model="show.task.fromWordList"> From a Word List</label>
+						<label class="checkbox"><input type="checkbox" data-ng-model="show.task.fromSemanticDomains"> From Semantic Domains</label>
+					</div></div>
+				</dd>
+				<dt>Settings</dt>
+				<dd>
+					<div class="control-group"><div class="controls">
+						<label class="checkbox"><input type="checkbox" data-ng-model="show.task.settings"> Settings</label>
+					</div></div>
+				</dd>
+				<dt>Review</dt>
+				<dd>
+					<div class="control-group"><div class="controls">
+						<label class="checkbox"><input type="checkbox" data-ng-model="show.task.review"> Review</label>
+					</div></div>
+				</dd>
+			</dl>
 			</fieldset>
 		</div>
 	</div>
 	</tab>
 </tabset>
+</form>
+</div>
