fix writing systems div missing

--- a/src/angular-app/languageforge/lexicon/views/writing-systems.html
+++ b/src/angular-app/languageforge/lexicon/views/writing-systems.html
@@ -60,6 +60,7 @@
 					<select class="form-control" id="script" data-ng-model="script">
 						<option>get script list</option>
 					</select>
+				</div>
 				<label class="control-label" for="region">Region</label>
 				<div class="controls">
 					<select class="form-control" id="region" data-ng-model="region">
