add abbreviation to writing systems

--- a/src/angular-app/languageforge/lexicon/views/writing-systems.html
+++ b/src/angular-app/languageforge/lexicon/views/writing-systems.html
@@ -31,7 +31,7 @@
 			<div class="control-group">
 				<label class="control-label" for="abbrev">Abbreviation</label>
 				<div class="controls">
-					<input type="text" id="abbrev" data-ng-model="currentWritingSystem.id">
+					<input type="text" id="abbrev" data-ng-model="currentWritingSystem.abbreviation">
 				</div>
 			</div>
 			<div class="control-group">
