fix edit writing systems button

--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -50,9 +50,9 @@
 							</li>
 						</ul>
 					</div>
-					<a data-ng-show="editWritingSystemsCollapsed" href="" data-ng-click="editWritingSystemsCollapsed = false">Edit writing systems</a>
+					<a data-ng-show="editWritingSystems.collapsed" href="" data-ng-click="editWritingSystems.collapsed = false">Edit writing systems</a>
 					
-					<div data-collapse="editWritingSystemsCollapsed">
+					<div data-collapse="editWritingSystems.collapsed">
 						<hr />
 						<button class="btn btn-primary pull-right" data-ng-click="saveWritingSystems()"><i class="icon-ok"></i> Done</button>
 						<h3 style="font-weight:normal">Edit Writing Systems</h3>
